--- a/budget/templates/budget/index.html
+++ b/budget/templates/budget/index.html
@@ -1,13 +1,64 @@
-{% extends "budget/base.html" %}
 <!-- Login -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-{% block head %}{% endblock head %}
+    {% load static%}
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Press+Start+2P&family=Reddit+Mono:wght@200..900&display=swap" 
+          rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/index.css?{% now "U" %}" />
 
-{% block content %}
+    <title>Document</title>
+</head>
+<body>
 
-  <div class="main-container">
+  <div class="d-flex main-container">
 
+    <div class="left-column">
+      
+        <a class="image-credit-link" 
+          href="https://www.freepik.com/free-vector/realistic-design-technology-background_6706368.htm#query=login%20background&position=23&from_view=keyword&track=ais_user&uuid=4047aca2-f75f-415e-96fa-77c3fa685923">
+          Image by Freepik
+        </a>
+      
+    </div>
+
+    <div class="ms-auto right-column">
+      <form class="input-form" 
+          action="{% url "budget:index" %}" 
+          method="POST">
+
+      {% csrf_token %}
+      <label class="form-label">Username</label>
+      <input class="form-control border-black" type="text" />
+
+      <label class="form-label">Password</label>
+      <input class="form-control border-black" type="text" />
+
+      <button class="btn btn-secondary">Log in</button>
+
+      <p>
+        <a class="link-secondary "href="#">Create An Account</a>
+      </p>
+    </form>
+
+    </div>
+  
   </div>
 
-
-{% endblock content %}
+</body>
+</html>
