--- a/budget/templates/budget/index.html
+++ b/budget/templates/budget/index.html
@@ -38,21 +38,23 @@
     </div>
 
     <div class="ms-auto right-column">
+  
       <form class="input-form" 
           action="{% url "budget:index" %}" 
           method="POST">
 
       {% csrf_token %}
+      <h1>Login</h1>
       <label class="form-label">Username</label>
-      <input class="form-control border-black" type="text" />
+      <input class="form-control border-black" type="text" name="username" />
 
       <label class="form-label">Password</label>
-      <input class="form-control border-black" type="text" />
+      <input class="form-control border-black" type="password" name="password" />
 
-      <button class="btn btn-secondary">Log in</button>
+      <button class="btn btn-dark submit-button" type="submit">Log in</button>
 
       <p>
-        <a class="link-secondary "href="#">Create An Account</a>
+        <a class="link-secondary "href="{% url "budget:createAccount" %}">Create An Account</a>
       </p>
     </form>
 
