--- a/budget/templates/budget/home.html
+++ b/budget/templates/budget/home.html
@@ -21,6 +21,10 @@
       <div class="link-container">
         <a class="menu-link">Link3</a>
       </div>
+
+      <div class="link-container logout-link">
+        <a class="menu-link" href="{% url 'budget:logout' %}">Logout</a>
+      </div>
     </div>
 
     <div class="d-flex flex-column middle-column">
