--- a/budget/static/css/home.css
+++ b/budget/static/css/home.css
@@ -35,6 +35,10 @@
     width: 100%;
 }
 
+.fa-door-open {
+    color: white;
+}
+
 .menu-link {
     color: white;
     text-decoration: none;
@@ -52,8 +56,6 @@
     text-decoration: none;
 }
 
-
-
 #piechart {
     width: 100%;
     height: 100%;
@@ -62,6 +64,26 @@
 .middle-column {
     flex: 1;
 } 
+
+.dropdown-toggle {
+    border: none;
+}
+
+.dropdown-menu {
+    max-height: 40vh;
+    overflow-y: scroll;
+}
+
+.dropdown-item:hover {
+    cursor: pointer;
+}
+
+.month-button {
+    border: none;
+    height: 100%;
+    width: 100%;
+    background-color: inherit;
+}
 
 .category-list {
     width: 100%
