--- a/budget/templates/budget/home.html
+++ b/budget/templates/budget/home.html
@@ -23,13 +23,14 @@
       </div>
 
       <div class="link-container logout-link">
+        <i class="fa-solid fa-door-open me-2"></i>
         <a class="menu-link" href="{% url 'budget:logout' %}">Logout</a>
       </div>
     </div>
 
     <div class="d-flex flex-column middle-column">
-      <div class="time-span-selector"></div>
-      
+      {% include 'budget/includes/monthSelector.html' %}
+
       <ul class="list-group category-list">
         {% for key, value in category_data.items %}
           <li class="list-group-item">
@@ -40,7 +41,7 @@
                 <i class="fa-solid fa-angle-up me-2 hidden"></i>
               </div>
               <div class="align-items-center category-label-container">
-                {{key}}
+                {{key}} 
                 <div class="progress" role="progressbar">
                   <div class="progress-bar" style="width: {{value.3}}%"></div>
                 </div>
@@ -67,21 +68,21 @@
             
           </li> 
         {% endfor %}
-        
       </ul>
     </div>
 
     <div class="d-flex flex-column ms-auto right-column">
+
       <div class="d-flex flex-column align-items-center">
         <div class="mt-2">
-          <h3>$100</h3>
+          <h3>${{total_spent}}</h3>
         </div>
         <div><h3>Spent</h3></div>
         <hr class="border border-secondary border-1 mt-2" style="width: 80%">
-        <div><h3>$1000</h3></div>
+        <div><h3>${{total_remaining}}</h3></div>
         <div><h3>Remaining</h3></div>
         <hr class="border border-secondary border-1 mt-2" style="width: 80%">
-        <div><h3>$1100</h3></div>
+        <div><h3>${{ time_period_budget }}</h3></div>
         <div><h3>Total Budget</h3></div>
         <hr class="border border-secondary border-1 mt-2" style="width: 80%">
       </div>
