--- a/budget/templates/budget/includes/addExpense.html
+++ b/budget/templates/budget/includes/addExpense.html
@@ -22,7 +22,7 @@
               <i class="fa-solid fa-plus ms-2 mt-auto mb-auto" id="add-category-btn"></i>
             </div>     
 
-            {% for category in categories %}
+            {% for category in category_data %}
               <li class="dropdown-item category-option">{{category}}</li>
             {% endfor %}   
           </ul> 
