--- a/budget/static/css/base.css
+++ b/budget/static/css/base.css
@@ -1,17 +1,18 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    font-family: "Montserrat", sans-serif;
+body,
+html {
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
 }
 .main-content {
-    padding-top: 100px;
+  padding-top: 100px;
 }
 
 .header {
-    background-color: #3d52a0;
-    transition: .5s;
+  background-color: #3d52a0;
+  transition: 0.5s;
 }
 
 .title {
-    color: white;   
+  color: white;
 }
