--- a/budget/templates/budget/includes/header.html
+++ b/budget/templates/budget/includes/header.html
@@ -6,6 +6,8 @@
     </button>
   </div>
   <div class="me-auto ms-auto">
-    <h1 class="title">Budget Tracker</h1>
+    <a href="{% url 'budget:home' %}" style="text-decoration: none">
+      <h1 class="title">Budget Tracker</h1>
+    </a>
   </div>
 </header>
