--- a/budget/static/css/goal.css
+++ b/budget/static/css/goal.css
@@ -53,6 +53,65 @@
   width: 30%;
 }
 
+.category-list-container {
+  width: 100%;
+  max-height: 60vh;
+  overflow-y: scroll;
+}
+
+.category-list-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 5px;
+  width: 100%;
+  height: 6%;
+  margin-left: 2px;
+  box-shadow: -2px 1px 1px #3d52a0;
+  margin-bottom: 1rem;
+  transition: 0.3s;
+}
+
+.category-list-item:hover {
+  box-shadow: -5px 5px 3px #3d52a0;
+  margin-left: 5px;
+}
+
+.fa-x {
+  color: red;
+}
+
+.fa-x:hover {
+  cursor: pointer;
+}
+
+#new-category-percent {
+  border-top-left-radius: 0%;
+  border-bottom-left-radius: 0%;
+}
+
+#new-category-percent:focus {
+  border-color: none !important;
+  box-shadow: none;
+}
+
+#new-category:focus {
+  border-color: none;
+  box-shadow: none;
+}
+
+.active-month-selector {
+  max-height: 150px;
+  overflow-y: scroll;
+}
+
+.goal-name {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .chart-column {
   flex: 1;
 }
@@ -64,8 +123,8 @@
 .right-column {
   width: 20vw;
   height: 100%;
-  background-color: #ede8f5;
   flex: 0 0 auto;
+  overflow-y: scroll;
 }
 
 .goal-container {
@@ -73,4 +132,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border: solid black;
+  margin-bottom: 4px;
+}
+
+.hidden {
+  display: none !important;
 }
