--- a/budget/static/css/goal.css
+++ b/budget/static/css/goal.css
@@ -53,7 +53,7 @@
   width: 30%;
 }
 
-.category-list-container {
+.category-list-container .category-list-container-edit {
   width: 100%;
   max-height: 60vh;
   overflow-y: scroll;
@@ -66,7 +66,7 @@
   box-sizing: border-box;
   padding: 5px;
   width: 100%;
-  height: 6%;
+  height: 7%;
   margin-left: 2px;
   box-shadow: -2px 1px 1px #3d52a0;
   margin-bottom: 1rem;
@@ -134,6 +134,25 @@
   justify-content: center;
   border: solid black;
   margin-bottom: 4px;
+}
+
+.fa-angle-down:hover {
+  cursor: pointer;
+}
+
+.fa-angle-up:hover {
+  cursor: pointer;
+}
+
+.fa-pen-to-square:hover {
+  cursor: pointer;
+}
+
+.goal-dropdown-container {
+  height: 0;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  transition: 0.2s;
 }
 
 .hidden {
