--- a/budget/templates/budget/home.html
+++ b/budget/templates/budget/home.html
@@ -177,7 +177,7 @@
         </div>
         <hr class="border border-secondary border-1 mt-2" style="width: 80%">
         <div>
-          <h3>{{ time_period_budget }}</h3>
+          <h3>{{ monthly_budget }}</h3>
         </div>
         <div>
           <h4>Total Budget</h4>
